2009-09-22  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate):
	add further buttons: stop, pause, help

2009-09-21  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate):
	add support for fast-forward and fast-backward buttons

	* avatar.c (avt_navigate):
	add support for plus and minus buttons
	simplify function with the macro avt_nav_add

2009-09-20  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_load_image_xbm):
	renamed from avt_load_image_xbm_rgb
	all callers changed

	* akfavatar.h, avatar.c (avt_import_xbm, avt_show_image_xbm):
	new functions

	* avatar.c (avt_show_image_xpm):
	use avt_load_image_xpm instead of avt_import_xpm

	* avatar.c (avt_navigate): renamed from avt_get_direction

	* avatar.c (avt_navigate): add support for a cancel button

2009-09-19  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_get_direction): new function
	pascal/akfavatar.pas: adapted

	* avatar.c (avt_load_image_xbm_rgb): new function
	many callers adapted

2009-09-18  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_wait_button, avt_decide):
	buttons are combined of two parts

2009-09-17  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h, filechooser.c (avta_file_selection):
	replaces avta_get_file, allows custom filter

	* avatarsay.c (is_graphic_file): new function
	(ask_avatar_image): use avta_file_selection

	* avatarsay.c (is_demo_or_text): new function
	(ask_file): adapted
	demo scripts/archives should have the extention ".avt" now
	example demos renamed accordingly

2009-09-16  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c: global variable avt_image removed,
	global variable avt_image_name renamed to avatar_image
	(set_avatar_image, load_avatar_image): new functions
	(use_avatar_image): removed
	many functions adapted

	* avatarsay.c (about_avatarsay):
	bold question - error message if license not found

2009-09-15  Andreas K. Foerster  <info@akfoerster.de>
