@@ -1,14 +1,9 @@
-#define btn_cancel_width 32
-#define btn_cancel_height 32
+#define btn_cancel_width 17
+#define btn_cancel_height 21
 static unsigned char btn_cancel_bits[] = {
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x70, 0x00,
-   0x80, 0x03, 0x78, 0x00, 0x80, 0x07, 0x78, 0x00, 0x80, 0x0f, 0x3c, 0x00,
-   0x00, 0x1f, 0x3e, 0x00, 0x00, 0x3e, 0x1f, 0x00, 0x00, 0x3c, 0x0f, 0x00,
-   0x00, 0xf8, 0x07, 0x00, 0x00, 0xf8, 0x07, 0x00, 0x00, 0xf0, 0x03, 0x00,
-   0x00, 0xe0, 0x03, 0x00, 0x00, 0xf0, 0x07, 0x00, 0x00, 0xf8, 0x0f, 0x00,
-   0x00, 0x78, 0x1f, 0x00, 0x00, 0x3c, 0x1e, 0x00, 0x00, 0x3e, 0x3c, 0x00,
-   0x00, 0x1f, 0x7c, 0x00, 0x00, 0x0f, 0xf8, 0x00, 0x80, 0x07, 0xf0, 0x00,
-   0x80, 0x07, 0xe0, 0x00, 0x80, 0x03, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 };
+   0x00, 0xe0, 0x00, 0x07, 0xf0, 0x00, 0x0f, 0xf0, 0x00, 0x1f, 0x78, 0x00,
+   0x3e, 0x7c, 0x00, 0x7c, 0x3e, 0x00, 0x78, 0x1e, 0x00, 0xf0, 0x0f, 0x00,
+   0xf0, 0x0f, 0x00, 0xe0, 0x07, 0x00, 0xc0, 0x07, 0x00, 0xe0, 0x0f, 0x00,
+   0xf0, 0x1f, 0x00, 0xf0, 0x3e, 0x00, 0x78, 0x3c, 0x00, 0x7c, 0x78, 0x00,
+   0x3e, 0xf8, 0x00, 0x1e, 0xf0, 0x01, 0x0f, 0xe0, 0x01, 0x0f, 0xc0, 0x01,
+   0x07, 0x00, 0x00 };
