@@ -1,14 +1,8 @@
-#define btn_fastbackward_width 32
-#define btn_fastbackward_height 32
+#define btn_fastbackward_width 22
+#define btn_fastbackward_height 19
 static unsigned char btn_fastbackward_bits[] = {
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x40, 0x00, 0x01, 0x00, 0x60, 0x80, 0x01,
-   0x00, 0x70, 0xc0, 0x01, 0x00, 0x78, 0xe0, 0x01, 0x00, 0x7c, 0xf0, 0x01,
-   0x00, 0x7e, 0xf8, 0x01, 0x00, 0x7f, 0xfc, 0x01, 0x80, 0x7f, 0xfe, 0x01,
-   0xc0, 0x7f, 0xff, 0x01, 0xe0, 0xff, 0xff, 0x01, 0xc0, 0x7f, 0xff, 0x01,
-   0x80, 0x7f, 0xfe, 0x01, 0x00, 0x7f, 0xfc, 0x01, 0x00, 0x7e, 0xf8, 0x01,
-   0x00, 0x7c, 0xf0, 0x01, 0x00, 0x78, 0xe0, 0x01, 0x00, 0x70, 0xc0, 0x01,
-   0x00, 0x60, 0x80, 0x01, 0x00, 0x40, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 };
+   0x00, 0x02, 0x08, 0x00, 0x03, 0x0c, 0x80, 0x03, 0x0e, 0xc0, 0x03, 0x0f,
+   0xe0, 0x83, 0x0f, 0xf0, 0xc3, 0x0f, 0xf8, 0xe3, 0x0f, 0xfc, 0xf3, 0x0f,
+   0xfe, 0xfb, 0x0f, 0xff, 0xff, 0x0f, 0xfe, 0xfb, 0x0f, 0xfc, 0xf3, 0x0f,
+   0xf8, 0xe3, 0x0f, 0xf0, 0xc3, 0x0f, 0xe0, 0x83, 0x0f, 0xc0, 0x03, 0x0f,
+   0x80, 0x03, 0x0e, 0x00, 0x03, 0x0c, 0x00, 0x02, 0x08 };
