@@ -1,14 +1,8 @@
-#define btn_fastforward_width 32
-#define btn_fastforward_height 32
+#define btn_fastforward_width 22
+#define btn_fastforward_height 19
 static unsigned char btn_fastforward_bits[] = {
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x80, 0x00, 0x02, 0x00, 0x80, 0x01, 0x06, 0x00,
-   0x80, 0x03, 0x0e, 0x00, 0x80, 0x07, 0x1e, 0x00, 0x80, 0x0f, 0x3e, 0x00,
-   0x80, 0x1f, 0x7e, 0x00, 0x80, 0x3f, 0xfe, 0x00, 0x80, 0x7f, 0xfe, 0x01,
-   0x80, 0xff, 0xfe, 0x03, 0x80, 0xff, 0xff, 0x07, 0x80, 0xff, 0xfe, 0x03,
-   0x80, 0x7f, 0xfe, 0x01, 0x80, 0x3f, 0xfe, 0x00, 0x80, 0x1f, 0x7e, 0x00,
-   0x80, 0x0f, 0x3e, 0x00, 0x80, 0x07, 0x1e, 0x00, 0x80, 0x03, 0x0e, 0x00,
-   0x80, 0x01, 0x06, 0x00, 0x80, 0x00, 0x02, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 };
+   0x04, 0x10, 0x00, 0x0c, 0x30, 0x00, 0x1c, 0x70, 0x00, 0x3c, 0xf0, 0x00,
+   0x7c, 0xf0, 0x01, 0xfc, 0xf0, 0x03, 0xfc, 0xf1, 0x07, 0xfc, 0xf3, 0x0f,
+   0xfc, 0xf7, 0x1f, 0xfc, 0xff, 0x3f, 0xfc, 0xf7, 0x1f, 0xfc, 0xf3, 0x0f,
+   0xfc, 0xf1, 0x07, 0xfc, 0xf0, 0x03, 0x7c, 0xf0, 0x01, 0x3c, 0xf0, 0x00,
+   0x1c, 0x70, 0x00, 0x0c, 0x30, 0x00, 0x04, 0x10, 0x00 };
