@@ -1,14 +1,9 @@
-#define btn_left_width 32
-#define btn_left_height 32
+#define btn_left_width 22
+#define btn_left_height 21
 static unsigned char btn_left_bits[] = {
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x80, 0x00,
-   0x00, 0x00, 0xe0, 0x00, 0x00, 0x00, 0xf8, 0x00, 0x00, 0x00, 0xfe, 0x00,
-   0x00, 0x80, 0xff, 0x00, 0x00, 0xe0, 0xff, 0x00, 0x00, 0xf8, 0xff, 0x00,
-   0x00, 0xfe, 0xff, 0x00, 0x80, 0xff, 0xff, 0x00, 0xe0, 0xff, 0xff, 0x00,
-   0xf0, 0xff, 0xff, 0x00, 0xe0, 0xff, 0xff, 0x00, 0x80, 0xff, 0xff, 0x00,
-   0x00, 0xfe, 0xff, 0x00, 0x00, 0xf8, 0xff, 0x00, 0x00, 0xe0, 0xff, 0x00,
-   0x00, 0x80, 0xff, 0x00, 0x00, 0x00, 0xfe, 0x00, 0x00, 0x00, 0xf8, 0x00,
-   0x00, 0x00, 0xe0, 0x00, 0x00, 0x00, 0x80, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 };
+   0x00, 0x00, 0x08, 0x00, 0x00, 0x0e, 0x00, 0x80, 0x0f, 0x00, 0xe0, 0x0f,
+   0x00, 0xf8, 0x0f, 0x00, 0xfe, 0x0f, 0x80, 0xff, 0x0f, 0xe0, 0xff, 0x0f,
+   0xf8, 0xff, 0x0f, 0xfe, 0xff, 0x0f, 0xff, 0xff, 0x0f, 0xfe, 0xff, 0x0f,
+   0xf8, 0xff, 0x0f, 0xe0, 0xff, 0x0f, 0x80, 0xff, 0x0f, 0x00, 0xfe, 0x0f,
+   0x00, 0xf8, 0x0f, 0x00, 0xe0, 0x0f, 0x00, 0x80, 0x0f, 0x00, 0x00, 0x0e,
+   0x00, 0x00, 0x08 };
