@@ -1,14 +1,9 @@
-#define btn_right_width 32
-#define btn_right_height 32
+#define btn_right_width 22
+#define btn_right_height 21
 static unsigned char btn_right_bits[] = {
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x01, 0x00, 0x00,
-   0x00, 0x07, 0x00, 0x00, 0x00, 0x1f, 0x00, 0x00, 0x00, 0x7f, 0x00, 0x00,
-   0x00, 0xff, 0x01, 0x00, 0x00, 0xff, 0x07, 0x00, 0x00, 0xff, 0x1f, 0x00,
-   0x00, 0xff, 0x7f, 0x00, 0x00, 0xff, 0xff, 0x01, 0x00, 0xff, 0xff, 0x07,
-   0x00, 0xff, 0xff, 0x0f, 0x00, 0xff, 0xff, 0x07, 0x00, 0xff, 0xff, 0x01,
-   0x00, 0xff, 0x7f, 0x00, 0x00, 0xff, 0x1f, 0x00, 0x00, 0xff, 0x07, 0x00,
-   0x00, 0xff, 0x01, 0x00, 0x00, 0x7f, 0x00, 0x00, 0x00, 0x1f, 0x00, 0x00,
-   0x00, 0x07, 0x00, 0x00, 0x00, 0x01, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-   0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00 };
+   0x04, 0x00, 0x00, 0x1c, 0x00, 0x00, 0x7c, 0x00, 0x00, 0xfc, 0x01, 0x00,
+   0xfc, 0x07, 0x00, 0xfc, 0x1f, 0x00, 0xfc, 0x7f, 0x00, 0xfc, 0xff, 0x01,
+   0xfc, 0xff, 0x07, 0xfc, 0xff, 0x1f, 0xfc, 0xff, 0x3f, 0xfc, 0xff, 0x1f,
+   0xfc, 0xff, 0x07, 0xfc, 0xff, 0x01, 0xfc, 0x7f, 0x00, 0xfc, 0x1f, 0x00,
+   0xfc, 0x07, 0x00, 0xfc, 0x01, 0x00, 0x7c, 0x00, 0x00, 0x1c, 0x00, 0x00,
+   0x04, 0x00, 0x00 };
